force-app/main/default/objects/Swap_Rate__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Year</fullName>
            </value>
            <value>
                <fullName>7 Year</fullName>
            </value>
            <value>
                <fullName>10 Year</fullName>
            </value>
            <value>
                <fullName>30 Year</fullName>
            </value>
            <value>
                <fullName>1M LIBOR</fullName>
            </value>
            <value>
                <fullName>1M SOFR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>