force-app/main/default/objects/Swap_Rate__c/fields/Seven_Year_Swap__c.field-meta.xml
<CustomField>
    <fullName>Seven_Year_Swap__c</fullName>
    <label>7 Year Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>