force-app/main/default/objects/Swap_Rate__c/fields/Term_Rates_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Term_Rates_Based_On__c</fullName>
    <label>Term Rates Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swap</fullName>
            </value>
            <value>
                <fullName>Treasury</fullName>
                <default>true</default>
                <label>Treasury</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>