force-app/main/default/objects/Swap_Rate__c/fields/Three_Year_Swap__c.field-meta.xml
<CustomField>
    <fullName>Three_Year_Swap__c</fullName>
    <description>Three Year Swap</description>
    <inlineHelpText>Three Year Swap</inlineHelpText>
    <label>3 Year Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>