force-app/main/default/objects/Swap_Rate__c/fields/X1M_Term_SOFR_Floor__c.field-meta.xml
<CustomField>
    <fullName>X1M_Term_SOFR_Floor__c</fullName>
    <description>1M Term SOFR Floor</description>
    <inlineHelpText>1M Term SOFR Floor</inlineHelpText>
    <label>1M Term SOFR Floor</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>