force-app/main/default/objects/Swap_Rate__c/fields/X3_Year_Treasury_Floor__c.field-meta.xml
<CustomField>
    <fullName>X3_Year_Treasury_Floor__c</fullName>
    <description>3 Year Treasury Floor</description>
    <inlineHelpText>3 Year Treasury Floor</inlineHelpText>
    <label>3 Year Treasury Floor</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>