force-app/main/default/objects/Swap_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CreatedDateTime__c</columns>
    <columns>Five_Year_Swap__c</columns>
    <columns>Seven_Year_Swap__c</columns>
    <columns>Ten_Year_Swap__c</columns>
    <columns>Thirty_Year_Swap__c</columns>
    <columns>OneM_SOFR__c</columns>
    <columns>OneM_LIBOR__c</columns>
    <columns>X1M_Term_SOFR_Floor__c</columns>
    <columns>X3_Year_Treasury_Floor__c</columns>
    <columns>X5_Year_Treasury_Floor__c</columns>
    <columns>X7_Year_Treasury_Floor__c</columns>
    <columns>X10_Year_Treasury_Floor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>