force-app/main/default/objects/Swap_Rate__c/listViews/Swaps_Last_5_Days.listView-meta.xml
<ListView>
    <fullName>Swaps_Last_5_Days</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Five_Year_Swap__c</columns>
    <columns>Seven_Year_Swap__c</columns>
    <columns>Ten_Year_Swap__c</columns>
    <columns>Thirty_Year_Swap__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <label>Swaps Last 5 Days</label>
</ListView>