force-app/main/default/objects/Swap_Rate__c/listViews/Today_s_Rates.listView-meta.xml
<ListView>
    <fullName>Today_s_Rates</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Three_Year_Swap__c</columns>
    <columns>Five_Year_Swap__c</columns>
    <columns>Seven_Year_Swap__c</columns>
    <columns>Ten_Year_Swap__c</columns>
    <columns>Thirty_Year_Swap__c</columns>
    <columns>OneM_SOFR__c</columns>
    <columns>X1M_Term_SOFR_Floor__c</columns>
    <columns>X3_Year_Treasury_Floor__c</columns>
    <columns>X5_Year_Treasury_Floor__c</columns>
    <columns>X7_Year_Treasury_Floor__c</columns>
    <columns>X10_Year_Treasury_Floor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Rates</label>
</ListView>